--- a/keyedcache/templates/keyedcache/delete.html
+++ b/keyedcache/templates/keyedcache/delete.html
@@ -13,7 +13,7 @@
 {% show_messages %}
 <p>[<a href="{% url keyedcache_stats %}">Cache Stats</a>] [<a href="{% url keyedcache_view %}">View Cache</a>]</p>
 <h1>Delete From Cache</h1>
-<form method="POST" action="{% url keyedcache_delete %}">
+<form method="POST" action="{% url keyedcache_delete %}">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit"/>
 </form>
